--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,31 @@
 <div>
-    <p-menubar [model]="items" *ngIf="getIsShowTop">
-      <ng-template pTemplate="start" >
-        
-        <a onclick='javascript:window.location.href="/"' style="cursor: pointer;">
-          <img src="assets/imgs/logo.png" width="40" height="40" class="p-mr-2" style="position: relative;left:0.5rem;bottom:10px;margin-right: 1.5rem;">
-        </a>
-      </ng-template>
-      <!-- <input type="text" pInputText placeholder="Search"> -->
-      
-      <p-menu #menu [popup]="true" [model]="items2"></p-menu>
-      <!-- <img src="assets/imgs/avatar.png" style="width: 40px;height: 40px;position: relative;right: 2rem;bottom:0.5rem;cursor: pointer;" (click)="menu.toggle($event)"/> -->
-      
-      <img [src]="obj.avatarUrl" style="width: 40px;height: 40px;position: relative;right: 2.5rem;bottom:0.5rem;cursor: pointer;object-fit: cover;" (click)="menu.toggle($event)"/>
-      <span style="position: relative;right: 2rem;bottom:0.5rem;">
-        {{obj.displayName}}
-      </span>
-      <!-- <button type="button" pButton icon="pi pi-list" label="Show" (click)="menu.toggle($event)"></button> -->
-    </p-menubar>
-    <div id="topPage" [ngStyle]="{'margin': getIsShowTop?'0 0px':'0'}">
+  <p-menubar [model]="items" *ngIf="getIsShowTop">
+    <ng-template pTemplate="start">
+
+      <a onclick='javascript:window.location.href="/"' style="cursor: pointer;">
+        <img src="assets/imgs/logo.png" width="40" height="40" class="p-mr-2"
+          style="position: relative;left:0.5rem;bottom:10px;margin-right: 1.5rem;">
+      </a>
+    </ng-template>
+    <!-- <input type="text" pInputText placeholder="Search"> -->
+
+    <p-menu #menu [popup]="true" [model]="items2"></p-menu>
+    <!-- <img src="assets/imgs/avatar.png" style="width: 40px;height: 40px;position: relative;right: 2rem;bottom:0.5rem;cursor: pointer;" (click)="menu.toggle($event)"/> -->
+
+    <img [src]="obj.avatarUrl"
+      style="width: 40px;height: 40px;position: relative;right: 2.5rem;bottom:0.5rem;cursor: pointer;object-fit: cover;"
+      (click)="menu.toggle($event)" />
+    <span style="position: relative;right: 2rem;bottom:0.5rem;">
+      {{obj.displayName}}
+    </span>
+    <!-- <button type="button" pButton icon="pi pi-list" label="Show" (click)="menu.toggle($event)"></button> -->
+  </p-menubar>
+  <div id="topPage" [ngStyle]="{'margin': getIsShowTop?'0 0px':'0'}">
     <router-outlet></router-outlet>
   </div>
-  </div>
   
+  
+  <!-- 详情  -->
+  <app-export-excel-detail></app-export-excel-detail>
+  
+</div>
