--- a/src/app/common/components/export-excel/export-excel.component.scss
+++ b/src/app/common/components/export-excel/export-excel.component.scss
@@ -1,7 +1,7 @@
 :host{
     #rightExportIcon {
         position: fixed;
-        top: 40%;
+        // top: 40%;
         right: 0px;
         width: 4rem;
         height: 4rem;
