--- a/src/app/feature/components/export-excel-detail/export-excel-detail.component.html
+++ b/src/app/feature/components/export-excel-detail/export-excel-detail.component.html
@@ -1,4 +1,5 @@
-<app-export-excel [page]="detailpage"></app-export-excel>
+<app-export-excel [page]="detailpage" icon="assets/imgs/export.png" top="40%"></app-export-excel>
+
 
 <ng-template #detailpage>
   <span>Excel 导出</span>
