--- a/src/app/pages/modules/dashboards/guild/guild-livecast-flux-charge/guild-livecast-flux-charge.component.html
+++ b/src/app/pages/modules/dashboards/guild/guild-livecast-flux-charge/guild-livecast-flux-charge.component.html
@@ -27,7 +27,7 @@
               <td>{{guild.amount}}</td>
               <td>{{guild.remark}}</td>
               <td>{{guild.ownerId}}</td>
-              <td>{{guild.createdDate}}</td>
+              <td>{{guild.createdDate | chinaTime}}</td>
           </tr>
       </ng-template>
       <ng-template pTemplate="summary">
