--- a/src/app/pages/modules/dashboards/livecast/livecast.component.html
+++ b/src/app/pages/modules/dashboards/livecast/livecast.component.html
@@ -27,7 +27,7 @@
                 <!-- <th pSortableColumn="avatarUrl">封面图地址 <p-sortIcon field="avatarUrl"></p-sortIcon></th>
                 <th pSortableColumn="recordUrl">录播地址 <p-sortIcon field="recordUrl"></p-sortIcon></th> -->
                 <th pSortableColumn="createdDate">创建时间 <p-sortIcon field="createdDate"></p-sortIcon></th>
-                <th pSortableColumn="beginDate">开始时间 <p-sortIcon field="beginDate"></p-sortIcon></th>
+                <!-- <th pSortableColumn="beginDate">开始时间 <p-sortIcon field="beginDate"></p-sortIcon></th> -->
                 <th pSortableColumn="endDate">结束时间 <p-sortIcon field="endDate"></p-sortIcon></th>
                 <th pSortableColumn="isInLive">直播状态 <p-sortIcon field="isInLive"></p-sortIcon></th>
                 <th pSortableColumn="creatorId">直播创建人ID <p-sortIcon field="creatorId"></p-sortIcon></th>
@@ -50,9 +50,9 @@
                 <td><a href='javascript:' (click)="openFiles(livecast)" >{{livecast.files.length}}</a></td>
                 <!-- <td>{{livecast.avatarUrl}}</td>
                 <td>{{livecast.recordUrl}}</td> -->
-                <td>{{livecast.createdDate}}</td>
-                <td>{{livecast.beginDate}}</td>
-                <td>{{livecast.endDate}}</td>
+                <td>{{livecast.createdDate | chinaTime }}</td>
+                <!-- <td>{{livecast.beginDate}}</td> -->
+                <td>{{livecast.endDate  | chinaTime}}</td>
                 <td>{{livecast.status | dashboardspipe:"livecastStatus"}}</td>
                 <td>{{livecast.creatorId}}</td>
                 <td><a href='javascript:' (click)="openDialog(livecast,0)" >{{livecast.viewedReceiversCount}}</a></td>
