--- a/src/app/pages/modules/common/livecast-dialog/livecast-dialog.component.html
+++ b/src/app/pages/modules/common/livecast-dialog/livecast-dialog.component.html
@@ -19,6 +19,8 @@
                     <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                 </th>
                 <th pSortableColumn="guildId">教会ID <p-sortIcon field="guildId"></p-sortIcon></th>
+                <th pSortableColumn="guild.displayName">教会名字</th>
+                <th pSortableColumn="guild.avatarUrl">教会头像</th>
                 <th pSortableColumn="livecastId">直播ID <p-sortIcon field="livecastId"></p-sortIcon></th>
                 <th pSortableColumn="title">标题 <p-sortIcon field="title"></p-sortIcon></th>
                 <!-- <th>直播文件</th> -->
@@ -26,9 +28,10 @@
                 <th pSortableColumn="files.length">直播文件 <p-sortIcon field="files.length"></p-sortIcon></th>
                 <!-- <th pSortableColumn="avatarUrl">封面图地址 <p-sortIcon field="avatarUrl"></p-sortIcon></th>
                 <th pSortableColumn="recordUrl">录播地址 <p-sortIcon field="recordUrl"></p-sortIcon></th> -->
-                <th pSortableColumn="createdDate">创建时间 <p-sortIcon field="createdDate"></p-sortIcon></th>
-                <!-- <th pSortableColumn="beginDate">开始时间 <p-sortIcon field="beginDate"></p-sortIcon></th> -->
-                <th pSortableColumn="endDate">结束时间 <p-sortIcon field="endDate"></p-sortIcon></th>
+                <!-- <th pSortableColumn="createdDate">创建时间 <p-sortIcon field="createdDate"></p-sortIcon></th> -->
+                <th pSortableColumn="beginDate">创建时间 <p-sortIcon field="beginDate"></p-sortIcon></th>
+                <!-- <th pSortableColumn="endDate">结束时间 <p-sortIcon field="endDate"></p-sortIcon></th> -->
+                <th>视频播放时长</th>
                 <th pSortableColumn="isInLive">直播状态 <p-sortIcon field="isInLive"></p-sortIcon></th>
                 <th pSortableColumn="creatorId">直播创建人ID <p-sortIcon field="creatorId"></p-sortIcon></th>
                 <th pSortableColumn="viewedReceiversCount">已查看人员数量 <p-sortIcon field="viewedReceiversCount"></p-sortIcon></th>
@@ -44,6 +47,8 @@
                     <p-tableCheckbox [value]="livecast"></p-tableCheckbox>
                 </td>
                 <td>{{livecast.guildId}}</td>
+                <td>{{livecast.guild.displayName}}</td>
+                <td><img *ngIf="livecast.guild.avatarUrl!=null" [src]='livecast.guild.avatarUrl' style="height: 100px;object-fit: cover;width: 100px;"/></td>
                 <td>{{livecast.livecastId}}</td>
                 <td>{{livecast.title}}</td>
                 <td>{{livecast.flux<1024?livecast.flux.toFixed(2)+'MB':(livecast.flux/1024).toFixed(2)+'GB'}}</td>
@@ -51,10 +56,13 @@
                 <td><a href='javascript:' (click)="openFileDialog(livecast)" >{{livecast.files.length}}</a></td>
                 <!-- <td>{{livecast.avatarUrl}}</td>
                 <td>{{livecast.recordUrl}}</td> -->
-                <td>{{livecast.createdDate | chinaTime}}</td>
-                <!-- <td>{{livecast.beginDate | chinaTime}}</td> -->
-                <td>{{livecast.endDate | chinaTime}}</td>
-                <td>{{livecast.status | dashboardspipe:"livecastStatus"}}</td>
+                <!-- <td>{{livecast.createdDate | chinaTime}}</td> -->
+                <td>{{livecast.beginDate | chinaTime}}</td>
+                <!-- <td>{{livecast.endDate | chinaTime}}</td> -->
+                <!-- <td>{{livecast.endDate | secondTime : livecast.beginDate}}</td> -->
+                <td>{{(livecast.status!=0&&livecast.status!=1)? (livecast.endDate  |  secondTime : livecast.beginDate):'直播未开始或进行中'}}</td>
+                <!-- <td>{{livecast.status | dashboardspipe:"livecastStatus"}}</td> -->
+                <td [innerHTML]='(livecast.status | dashboardspipe:"livecastStatus")|htmlBuild'></td>
                 <td>{{livecast.creatorId}}</td>
               
                 <td><a href='javascript:' (click)="openDialog(livecast,0)" >{{livecast.viewedReceiversCount}}</a></td>
