--- a/src/app/pages/modules/dashboards/livecast/livecast.component.html
+++ b/src/app/pages/modules/dashboards/livecast/livecast.component.html
@@ -26,9 +26,10 @@
                 <th>直播文件</th>
                 <!-- <th pSortableColumn="avatarUrl">封面图地址 <p-sortIcon field="avatarUrl"></p-sortIcon></th>
                 <th pSortableColumn="recordUrl">录播地址 <p-sortIcon field="recordUrl"></p-sortIcon></th> -->
-                <th pSortableColumn="createdDate">创建时间 <p-sortIcon field="createdDate"></p-sortIcon></th>
-                <!-- <th pSortableColumn="beginDate">开始时间 <p-sortIcon field="beginDate"></p-sortIcon></th> -->
+                <!-- <th pSortableColumn="createdDate">创建时间 <p-sortIcon field="createdDate"></p-sortIcon></th> -->
+                <th pSortableColumn="beginDate">创建时间 <p-sortIcon field="beginDate"></p-sortIcon></th>
                 <th pSortableColumn="endDate">结束时间 <p-sortIcon field="endDate"></p-sortIcon></th>
+                <th>播放时长</th>
                 <th pSortableColumn="isInLive">直播状态 <p-sortIcon field="isInLive"></p-sortIcon></th>
                 <th pSortableColumn="creatorId">直播创建人ID <p-sortIcon field="creatorId"></p-sortIcon></th>
                 <th pSortableColumn="viewedReceiversCount">已查看人员数量 <p-sortIcon field="viewedReceiversCount"></p-sortIcon></th>
@@ -50,10 +51,12 @@
                 <td><a href='javascript:' (click)="openFiles(livecast)" >{{livecast.files.length}}</a></td>
                 <!-- <td>{{livecast.avatarUrl}}</td>
                 <td>{{livecast.recordUrl}}</td> -->
-                <td>{{livecast.createdDate | chinaTime }}</td>
-                <!-- <td>{{livecast.beginDate}}</td> -->
+                <!-- <td>{{livecast.createdDate | chinaTime }}</td> -->
+                <td>{{livecast.beginDate | chinaTime}}</td>
                 <td>{{livecast.endDate  | chinaTime}}</td>
-                <td>{{livecast.status | dashboardspipe:"livecastStatus"}}</td>
+                <td>{{(livecast.status!=0&&livecast.status!=1)? (livecast.endDate  |  secondTime : livecast.beginDate):'直播未开始或进行中'}}</td>
+                <!-- <td>{{livecast.status | dashboardspipe:"livecastStatus"}}</td> -->
+                <td [innerHTML]='(livecast.status | dashboardspipe:"livecastStatus")|htmlBuild'></td>
                 <td>{{livecast.creatorId}}</td>
                 <td><a href='javascript:' (click)="openDialog(livecast,0)" >{{livecast.viewedReceiversCount}}</a></td>
                 <td><a href='javascript:' (click)="openDialog(livecast,1)" >{{livecast.unviewedReceiversCount}}</a></td>
