--- a/src/app/pages/modules/common/livecast-dialog/livecast-dialog.component.html
+++ b/src/app/pages/modules/common/livecast-dialog/livecast-dialog.component.html
@@ -3,6 +3,7 @@
 <div class="card">
     <p-table #dt [value]="livecasts" [rows]="5" [paginator]="true" [globalFilterFields]="['title','guildId','livecastId']"
         [(selection)]="selectedlivecasts" [rowHover]="true" dataKey="livecastId"
+        sortField="beginDate" sortOrder="-1"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
             <div class="p-d-flex p-ai-center p-jc-between">
