--- a/src/app/pages/modules/common/guild-livecast-dialog/guild-livecast-dialog.component.html
+++ b/src/app/pages/modules/common/guild-livecast-dialog/guild-livecast-dialog.component.html
@@ -1,4 +1,4 @@
-
+<p-toast></p-toast>
 <div  class="card">
 
   <p-table  #dt [value]="guildLivecastDtos" [rows]="5" [paginator]="true" [globalFilterFields]="['guildName','guildAddress','guildId']"
@@ -12,22 +12,32 @@
             <i class="pi pi-search"></i>
             <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Search..." />
         </span>
+        
+        <span style="margin-left: 60%;">
+            <button pButton type="button" label="导出教会联系人" (click)="exportGuildExcel();"></button>
+        </span>
     </div>
 </ng-template>
     <ng-template pTemplate="header">
         <tr>
+            <th style="width: 3rem">
+                <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+            </th>
             <th style="width: 3rem"></th>
             <th pSortableColumn="guildId">教会ID <p-sortIcon field="guildId"></p-sortIcon></th>
             <th pSortableColumn="guildName">教会名字 <p-sortIcon field="guildName"></p-sortIcon></th>
             <th>教会头像</th>
             <!-- <th pSortableColumn="guildAddress">教会地址 <p-sortIcon field="guildAddress"></p-sortIcon></th> -->
             <th pSortableColumn="lasterCreatedLivecastTime">最新发布直播时间 <p-sortIcon field="lasterCreatedLivecastTime"></p-sortIcon></th>
-            <th pSortableColumn="guildDto.guildLivecastDto.length">发布直播次数 <p-sortIcon field="guildDto.guildLivecastDto.length"></p-sortIcon></th>
+            <!-- <th pSortableColumn="guildDto.guildLivecastDto.length">发布直播次数 <p-sortIcon field="guildDto.guildLivecastDto.length"></p-sortIcon></th> -->
             <th>教会创建时间</th>
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-guildDto let-expanded="expanded">
         <tr>
+            <td>
+                <p-tableCheckbox [value]="guildDto"></p-tableCheckbox>
+            </td>
             <td>
                 <button type="button" pButton pRipple [pRowToggler]="guildDto" class="p-button-text p-button-rounded p-button-plain" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button>
             </td>
@@ -38,7 +48,7 @@
               width: 65px;" class="p-shadow-4" /></td>
             <!-- <td>{{guildDto.guildAddress}}</td> -->
             <td>{{guildDto.lasterCreatedLivecastTime | chinaTime}}</td>
-            <td style="color: red;">{{guildDto.guildLivecastDto.length}}</td>
+            <!-- <td style="color: red;">{{guildDto.guildLivecastDto.length}}</td> -->
             <td>{{guildDto.guildCreatedTime|showTime:'创建'}}</td>
         </tr>
     </ng-template>
@@ -98,7 +108,7 @@
                 <td>{{livecast.title}}</td>
                 <td>{{livecast.flux<1024?livecast.flux.toFixed(2)+'MB':(livecast.flux/1024).toFixed(2)+'GB'}}</td>
                 <td><a href='javascript:' (click)="openFileDialog(livecast)" >{{livecast.files.length}}</a></td>
-                <td>{{livecast.beginDate | chinaTime}}</td>
+                <td>{{livecast.beginDate |showTime:'创建'}}</td>
                 <td>{{(livecast.status!=0&&livecast.status!=1)? (livecast.endDate  |  secondTime : livecast.beginDate):'直播未开始或进行中'}}</td>
                 <td [innerHTML]='(livecast.status | dashboardspipe:"livecastStatus")|htmlBuild'></td>
                 <td>{{livecast.creatorId}}</td>
