--- a/src/app/pages/modules/common/account-dialog/account-dialog.component.html
+++ b/src/app/pages/modules/common/account-dialog/account-dialog.component.html
@@ -62,7 +62,7 @@
               </td>
               <td>{{account.isCloudChurchAdmin?'是':'否'}}</td>
               <td>{{account.lastUsingGuildId}}</td>
-              <td>{{account.userCreatedTime | chinaTime}}</td>
+              <td>{{account.userCreatedTime  |showTime:'用户创建'}}</td>
               <td style="word-wrap: normal !important;word-break: normal !important;">
                 <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-mr-2" ></button>
               </td>
