--- a/src/app/pages/modules/dashboards/guild/guild.component.html
+++ b/src/app/pages/modules/dashboards/guild/guild.component.html
@@ -26,7 +26,7 @@
                 <th pSortableColumn="avatarUrl">教会头像 </th>
                 <th pSortableColumn="Address">教会地址 </th>
                 <!-- <th pSortableColumn="isCanNewJoin">教会是否允许新成员加入 <p-sortIcon field="isCanNewJoin"></p-sortIcon></th> -->
-                <th pSortableColumn="createdDate">创建时间 <p-sortIcon field="createdDate"></p-sortIcon></th>
+               
                 <th pSortableColumn="guildAuditMode">用户加入教会是否需要审核 <p-sortIcon field="guildAuditMode"></p-sortIcon></th>
                 <th pSortableColumn="status">教会状态 <p-sortIcon field="status"></p-sortIcon></th>
                 <th pSortableColumn="ownerId">教会所属人ID <p-sortIcon field="ownerId"></p-sortIcon></th>
@@ -38,6 +38,7 @@
                 <th pSortableColumn="notificationCount">教会通知 <p-sortIcon field="notificationCount"></p-sortIcon></th>
                 <th pSortableColumn="discussCount">教会讨论 <p-sortIcon field="discussCount"></p-sortIcon></th>
                 <th pSortableColumn="livecastCount">教会直播 <p-sortIcon field="livecastCount"></p-sortIcon></th>
+                <th pSortableColumn="createdDate">创建时间 <p-sortIcon field="createdDate"></p-sortIcon></th>
                 <th pSortableColumn="lasterCreatedLivecastTime">上次直播时间 <p-sortIcon field="lasterCreatedLivecastTime"></p-sortIcon></th>
                 <th style="width: 12rem">
                   <span style="color:red;">操作</span>
@@ -54,7 +55,7 @@
                 <td><img *ngIf="guild.avatarUrl!=null" [src]='guild.avatarUrl' style="height: 100px;object-fit: cover;width: 100px;"/></td>
                 <td>{{guild.address}}</td>
                 <!-- <td>{{guild.isCanNewJoin==0?'不允许':'允许'}}</td> -->
-                <td>{{guild.createdDate | chinaTime}}</td>
+             
                 <td>{{guild.guildAuditMode==1?'仅被邀请加入的新成员不需要审核':guild.guildAuditMode==2?'仅搜索加入的新成员需要审核':guild.guildAuditMode==3?'需要审核':'不需要审核'}}</td>
                 <td>{{guild.status | dashboardspipe:"GuildStatus"}}</td>
                 <td>{{guild.ownerId}}</td>
@@ -68,7 +69,7 @@
 
                 <td><a href='javascript:' (click)="openBlocDialog(guild,1)" >{{guild.discussCount}}</a></td>
                 <td><a href='javascript:' (click)="openBlocDialog(guild,2)" >{{guild.livecastCount}}</a></td>
-
+                <td>{{guild.createdDate |showTime:'教会创建'}}</td>
                 <td>{{guild.lasterCreatedLivecastTime==null?'没创建过直播':guild.lasterCreatedLivecastTime|showTime:'上次创建'}}</td>
                 <td style="word-wrap: normal !important;word-break: normal !important;">
                     <button *ngIf="guild.status==0" style="margin-right: 1rem;" pButton type="button" label='删除' (click)="setGuildStatus(guild)" class="p-button-raised p-button-danger"></button>
